fix padding in section mobile

--- a/src/css/your-order.css
+++ b/src/css/your-order.css
@@ -1,5 +1,5 @@
 .order-section {
-  padding: 80px 20px 80px 20px;
+  padding: 80px 0;
   background-color: #576f35;
 }
 
